# ADSALA_

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_DUPLICATION_ANALYSIS.md  PREDICTOR_IMPROVEMENTS.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  config.yaml  requirements.txt  set_up.sh
data_collect/: BLAS-context.cpp  BLAS-context.h  BLIS-context.cpp  BLIS-context.h  CMakeLists.txt  CMakeLists.txt.orig  HPC_header.sh  MKL-context.cpp  MKL-context.h  OpenBLAS-context.cpp  OpenBLAS-context.h  cblas.h  cuBLAS-context.h  interfaces.cpp  interfaces.h  library-manager.h  main.cpp  readme.md  setup-build-Gadi.sh  setup-build.sh  setup-run.sh
data_collect/Lab_Ubuntu/: real.d  real_backup.d
data_collect/generate domain/: domain500MB-1000points_axpy.csv  domain500MB-1000points_axpy.d  domain500MB-1000points_dot.d  domain500MB-1000points_trsv.csv  domain500MB-1000points_trsv.d  domain500MB-1041points_dot_False.d  domain500MB-1063points_symm.csv  domain500MB-1063points_symm.d  domain500MB-1118points_trsv.d  domain500MB-112points_trsv_False.d  domain500MB-122points_symm_False.d  domain500MB-1251points_symm.csv  domain500MB-126points_symm_False.d  domain500MB-129points_symm_False.d  domain500MB-21175points_symm.csv  domain500MB-3422points_gemm_True.d  domain500MB-35582points_symm.d  domain500MB-6250points_axpy.csv  domain500MB-6250points_axpy.d  generate_domain.py
data_collect/generate domain/data/: domain500MB-1089points_trsm_False.csv  domain500MB-1168points_trmm_True.d  domain500MB-1170points_syrk_True.csv  domain500MB-1171points_trsm_True.csv  domain500MB-1171points_trsm_True.d  domain500MB-1189points_syr2k_True.csv  domain500MB-1246points_syr2k_False.csv  domain500MB-1246points_syr2k_False.d  domain500MB-1321points_symm_True.csv  domain500MB-1321points_symm_True.d  domain500MB-2179points_trmm_False.d  domain500MB-2185points_trsm_False.csv  domain500MB-2193points_syrk_False.d
data_collect/generate domain/test_data/: domain500MB-101points_gemm_True.d  domain500MB-103points_dot_False.d  domain500MB-105points_gemm_True.d  domain500MB-108points_trmm_False.d  domain500MB-112points_syrk_False.d  domain500MB-113points_syrk_True.d  domain500MB-31250points_dot_True.d  domain50MB-104points_dot_False.d
data_collect/legacy/: generate-domain.cpp
data_collect/lib/: CMakeCache.txt  YOURFILE.asm  cmake_install.cmake  real.d  real_1.sh  real_compute_node_result.d  run_1_gadi.sh
data_collect/real 500M new Gadi/: CMakeCache.txt  cmake_install.cmake  domain_split_1.py  domain_split_1_socket.py  domain_split_2.py  real.d  real_1_cache_32.sh  real_1_numa_32.sh  real_2.d  test_random_number.sh  z__.d
data_collect/real 500M new Gadi/domains_1/: 0.sh  1.d  11.d  11.sh  14.sh  15.sh  16.d  3.d  3.sh  5.d  6.sh  8.d  9.d  9.sh  batch.sh
data_collect/real 500M new Gadi/domains_1/STDOUT/: 0.out  1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  3.out  6.out  7.out  (+2 more)
data_collect/real 500M new Gadi/domains_2/: 0.d  1.sh  10.d  11.sh  12.d  12.sh  13.d  13.sh  17.d  3.d  3.sh  4.d  6.d  6.sh  7.d  7.sh  8.d  8.sh  9.sh  batch.sh
data_collect/real 500M new Gadi/domains_BKP/: 0.d  1.d  11.d  2.d  4.d  5.d  6.d  8.d  9.d
data_collect/real 500M new Gadi/sbatch_xthi_tests/: ref.xthi_1.out  ref.xthi_1_l3_16.out  ref.xthi_1_numa_32.out  ref.xthi_1_socket.out  ref.xthi_2.out  xthi_1_numa_32.sh  xthi_2.sh
data_collect/real 500M new/domains_1/: 0.d  10.d  12.d  13.d  14.d  15.d  16.d  17.d  2.d  6.d
data_collect/real 500M new/domains_legacy/: 0.sh  1.sh  11.sh  13.sh  15.sh  16.sh  17.sh  2.d  2.sh  3.sh  5.d  5.sh  6.sh  7.sh  batch.sh
data_collect/run_gadi_dot/: combine_domains.py  combine_domains.sh
data_collect/run_gadi_dot/domains_1/: 0.d  1.sh  11.d  11.sh  12.d  12.sh  13.d  17.d  17.sh  18.d  19.sh  2.d  2.sh  20.sh  3.d  3.sh  4.d  5.d  5.sh  6.d  8.d  9.d  9.sh
data_collect/run_gadi_dot/domains_1_backup_20230725_013322/: 0.sh  1.sh  10.sh  12.sh  13.sh  16.sh  17.d  17.sh  19.sh  2.d  2.sh  20.sh  4.d  4.sh  6.sh  8.sh  batch.sh
data_collect/run_gadi_dot_new/: batch_domains.csv  real_1.sh
data_collect/run_gadi_dot_new/domains_1/: 0.sh  1.sh.o94890120  10.sh  10.sh.o94890131  16.sh  19.sh  2.sh.o94890122  3.sh  3.sh.o94890123  4.sh.o94890124  5.d  5.sh  5.sh.o94890125  6.d  6.sh  6.sh.o94890126  7.sh.o94890127  8.d  8.sh.o94890128  9.sh.o94890130  batch.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_141701/: 0.sh  10.sh  13.sh  16.sh  18.sh  19.sh  2.sh  20.sh  5.sh  6.sh  7.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_141835/: 12.sh  15.sh  17.sh  2.sh  3.d  4.sh  5.sh  6.sh  8.sh  9.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_141902/: 0.sh  12.sh  13.sh  14.sh  16.sh  18.sh  19.d  19.sh  2.sh  4.sh  6.sh  7.sh  9.d  9.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_142145/: 0.d  1.sh  11.sh  13.sh  14.sh  16.sh  17.sh  20.sh  3.sh  4.sh  6.sh  7.sh  8.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_142250/: 0.sh  11.sh  12.sh  13.sh  15.sh  16.sh  18.sh  19.sh  20.sh  3.sh  5.sh  9.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_142453/: 0.sh  12.sh  13.sh  14.sh  18.sh
data_collect/run_gadi_dot_new/domains_1_backup_20230908_142516/: 0.sh  10.sh  3.sh  4.sh  6.d  8.d
data_collect/run_gadi_dot_new/domains_1_backup_20230908_142532/: 1.sh  17.sh  20.sh
legacy/test_old/: CMakeLists.txt
legacy/test_old/src/: main.cpp
library_frame/: CMakeLists.txt
library_frame/BLAS/: .CMakeLists.txt.swp  CMakeLists.txt
library_frame/BLAS/include/: blas_config.h  blas_exceptions.h
library_frame/BLAS/src/: blas_config.cpp  interfaces-ml.cpp
library_frame/predictor/: config-read.h  predictor.c
src/library_frame/predictor/: CMakeLists.txt  predictor.c  predictor.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_integration.cpp  test_memory_safety.cpp
tests/unit/: CMakeLists.txt  test_config.cpp  test_csv.cpp  test_dispatcher.cpp  test_exceptions.cpp  test_helpers.cpp  test_predictor_helpers.cpp  test_template_implementations.cpp  test_templates.cpp
(+373 files in other folders)
